# sport_edge

./: .env.example  .gitignore  M0_M1_COMPLETION_SUMMARY.md  QUICKSTART.md  README.md  STATUS.md  config.yaml  db_schema.py  package.json  pyproject.toml
backtest/: __init__.py  run.py
data/: sample_games.csv  sample_odds.csv
data/props_cache/: nba_1626157_2025-26.json  nba_1626162_2025-26.json  nba_1626164_2025-26.json  nba_1626167_2025-26.json  nba_1626171_2025-26.json  nba_1626181_2025-26.json  nba_1626220_2025-26.json  nba_1627739_2025-26.json  nba_1627742_2025-26.json  nba_1627750_2025-26.json  nba_1627759_2025-26.json  nba_1627780_2025-26.json  nba_1627783_2025-26.json  nba_1627826_2025-26.json  nba_1627936_2025-26.json  nba_1628368_2025-26.json  nba_1628370_2025-26.json  nba_1628374_2025-26.json  nba_1628378_2025-26.json  nba_1628381_2025-26.json  nba_1628384_2025-26.json  nba_1628386_2025-26.json  (+205 more)
edge/: __init__.py  odds_math.py
features/: __init__.py  build.py
ingest/: __init__.py  games.py  odds.py
models/: train.py
props/: __init__.py  analyzer.py  fetcher.py  models.py
report/: __init__.py  daily.py
scripts/: export_training_data.py  fetch_injuries.py  fetch_injuries_sportsdata.py  fetch_live_injuries.py  fetch_todays_games.py  init_db.py  live_games.py  live_props.py  load_sample_data.py  predict_all_leagues.py  predict_today.py  predict_with_injuries.py  quickstart.sh  roi_report.py  run_all_tests.sh  run_live_with_roi.sh  update_results.py  verify_data.py
tests/: __init__.py  test_features.py  test_odds_math.py
ui/: package-lock.json
(+10 files in other folders)
